# aigis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
aigis/annotate/: utils.py
aigis/convert/: coco.py  tiles.py  utils.py
aigis/segment/: eval.py  models.py  postprocess.py  utils.py
aigis/utils/: analysis.py
aigis_convert/: COCO_validator.py  coordinates.py  tiles.py
aigis_convert/orthogonalise/: orthogonalise.py
aigis_segment/: postprocess.py
docs/: README.md  annotate.md  convert.md  segment.md
map/: index.html  viewer.html
scripts/: CMakeLists.txt  README.md  aigis_eda.py  batch_geojson2coco.py  benchmark.cpp  benchmark.py  coco2geojson.py  coco_balance.py  coco_split.py  density_map.py  download_raster.py  fine_tuning_detectron2.py  fine_tuning_detectron2_from_roboflow.py  geojson2coco.py  get_raster_jpeg.py  jpeg2tiff.py  make_mask.py  osm_cleaner.py  poc_gradio.py  predict_area.py  prediction_batch_detectron2.py  prediction_detectron2.py  prediction_raster_detectron2.py  sa1.py  tif_split.py  vit_finetune.py  vit_predict.py
sphinx-docs/: aigis.annotate.rst  aigis.convert.orthogonalise.rst  aigis.convert.rst  aigis.other.rst  aigis.rst  aigis.segment.rst  conf.py  index.rst  modules.rst  scripts.rst
tests/: test_extract_output_annotations.py
